kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-gitops
  name: hello-gitops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-gitops
  template:
    metadata:
      labels:
        app: hello-gitops
    spec:
      containers:
        - image: 600086062597.dkr.ecr.ap-northeast-2.amazonaws.com/erik-test:latest
          name: hello-gitops
          ports:
            - name: http
              containerPort: 8080
      # imagePullSecrets:
      # - name: my-registry-creds
